# AquinSDK

./: package-lock.json  package.json
.github/workflows/: publish.yml
javascript-sdk/: package-lock.json  package.json  test.js  tsconfig.json
javascript-sdk/src/: client.ts  exceptions.ts  index.ts
python-sdk/: README.md  pyproject.toml  test.py
python-sdk/aquin/: __init__.py  client.py  exceptions.py
