[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aquin"
version = "0.2.0"
description = "Python SDK for the Aquin model API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://aquin.app"